Add UI behavior to the game
1. Transferred prompt input to button input.
2. Win and score displays are shown in html window.
3. Refactored code to transfer console based flow
to UI based flow.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="game-manager.js"></script>
+    <script src="game-manager.js" defer></script>
 </head>
 <body>
-    
+    <div id="game-ui">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <p id="display"></p>
+    <p id="scoreboard"></p>
 </body>
 </html>
