Change html structure and fix bugs

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="game-manager.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <h1>Stone Scroll Blades</h1>
     <div id="game-ui">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <img id="rock" src="./Assets/Stone.png"></button>
+        <img id="paper" src="./Assets/Scroll.png"></button>
+        <img id="scissors" src="./Assets/Blades.png"></button>
     </div>
     <p id="display"></p>
     <p id="scoreboard"></p>
