Remove rudimentary button tags from index.html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Stone Scroll Blades</h1>
     <div id="game-ui">
-        <img id="rock" src="./Assets/Stone.png"></button>
-        <img id="paper" src="./Assets/Scroll.png"></button>
-        <img id="scissors" src="./Assets/Blades.png"></button>
+        <img id="rock" src="./Assets/Stone.png">
+        <img id="paper" src="./Assets/Scroll.png">
+        <img id="scissors" src="./Assets/Blades.png">
     </div>
     <p id="display"></p>
     <p id="scoreboard"></p>
